--- a/src/styles/editarPedidosModal.css
+++ b/src/styles/editarPedidosModal.css
@@ -238,7 +238,7 @@
   font-weight: 600 !important;
   text-transform: none !important;
   color: #000000 !important;
-  border-color: #000000 !important; /* Cambiado a negro */
+  border-color: #000000 !important;
 }
 
 .boton-guardar {
@@ -336,7 +336,6 @@
   }
 }
 
-/* Validaciones no tan exigentes para dirección */
 .campo-direccion
   .MuiOutlinedInput-root.Mui-focused
   .MuiOutlinedInput-notchedOutline {
