--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -38,3 +38,7 @@
 .navbar-light .navbar-nav .nav-link:hover {
   color: #0d6efd;
 }
+
+.font-orbitron {
+  font-family: "Orbitron", sans-serif !important;
+}
