hotFix:arreglo en alerta de resgistro

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ body {
 .contenedor-principal {
   background-color: transparent !important;
 }
+.swal2-container {
+  z-index: 9999 !important;
+}
